Fixing layout issue with radio input labels in webforms.

--- a/sass/partials/_forms.scss
+++ b/sass/partials/_forms.scss
@@ -11,6 +11,10 @@
   margin-top: 1em;
 }
 
+.webform-container-inline .field-item label {
+
+}
+
 .horizontal-tabs fieldset.horizontal-tabs-pane {
   padding: 1em;
 }
